--- a/mynotebook/main/templates/main/page.html
+++ b/mynotebook/main/templates/main/page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Запись</title>
 </head>
 <body>
-    <h1>Главная страница</h1>
-    <p>Главная страница</p>
+    <h1>Запись</h1>
+    <p>Запись</p>
 </body>
 </html>
