--- a/mynotebook/main/templates/main/index.html
+++ b/mynotebook/main/templates/main/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
-</head>
-<body>
+{% extends 'main/layout.html' %}
+
+{% block title %}Главная страница{% endblock %}
+
+{% block content %}
     <h1>Главная страница</h1>
     <p>Главная страница</p>
-</body>
-</html>
+{% endblock %}
+
