--- a/mynotebook/main/templates/main/page.html
+++ b/mynotebook/main/templates/main/page.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Запись</title>
-</head>
-<body>
+{% extends 'main/layout.html' %}
+
+{% block title %}Запись{% endblock %}
+
+{% block content %}
     <h1>Запись</h1>
     <p>Запись</p>
-</body>
-</html>
+{% endblock %}
