--- a/mynotebook/main/templates/main/layout.html
+++ b/mynotebook/main/templates/main/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -5,9 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <aside>
+        <img src="{% static 'main/img/depositphotos_19272371-stock-photo-notebook.jpg' %}" alt="Лого">
+        <span class="logo">MyNotebook</span>
+        <h3>Навигация</h3>
+        <ul>
+            <a href=''><li>Главная</li>
+            <a href=''><li>Добавить заметку</li>
+        </ul>
+    </aside>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+    
 </body>
 </html>
