--- a/mynotebook/main/templates/main/layout.html
+++ b/mynotebook/main/templates/main/layout.html
@@ -8,16 +8,15 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <aside>
         <img src="{% static 'main/img/depositphotos_19272371-stock-photo-notebook.jpg' %}" alt="Лого">
         <span class="logo">MyNotebook</span>
-        <h3>Навигация</h3>
         <ul>
-            <a href=''><li>Главная</li>
-            <a href=''><li>Добавить заметку</li>
+            <a href=''><li><i class="bi bi-journal"></i> Блокнот</li>
+            <a href=''><li><i class="bi bi-pencil"></i> Добавить заметку</li>
         </ul>
     </aside>
     <main>
