--- a/mynotebook/main/templates/main/layout.html
+++ b/mynotebook/main/templates/main/layout.html
@@ -15,14 +15,13 @@
         <img src="{% static 'main/img/depositphotos_19272371-stock-photo-notebook.jpg' %}" alt="Лого">
         <span class="logo">MyNotebook</span>
         <ul>
-            <a href=''><li><i class="bi bi-journal"></i> Блокнот</li>
-            <a href=''><li><i class="bi bi-pencil"></i> Добавить заметку</li>
+            <a href='{% url "home" %}'><li><i class="bi bi-journal"></i> Блокнот</li>
+            <a href='{% url "page" %}'><li><i class="bi bi-pencil"></i> Добавить заметку</li>
         </ul>
     </aside>
     <main>
         {% block content %}
         {% endblock %}
     </main>
-    
 </body>
 </html>
