--- a/mynotebook/main/templates/main/page.html
+++ b/mynotebook/main/templates/main/page.html
@@ -3,6 +3,9 @@
 {% block title %}Запись{% endblock %}
 
 {% block content %}
-    <h1>Запись</h1>
-    <p>Запись</p>
+    <div class="features">
+        <h1>Страница</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos suscipit, consectetur fugiat asperiores assumenda maxime libero illum eligendi sunt odit minus dicta nostrum cumque, ut autem deleniti corrupti, doloribus sed!</p>
+        <button class="btn btn-danger">Добавить заметку</button>
+    </div>
 {% endblock %}
