--- a/mynotebook/main/static/main/css/main.css
+++ b/mynotebook/main/static/main/css/main.css
@@ -30,7 +30,7 @@ aside ul li {
     color: #fff;
     display: block;
     margin-top: 10px;
-    transition: all.6s ease;
+    transition: transform .6s ease;
 }
 
 aside ul li:hover, aside ul a:hover {
@@ -38,3 +38,15 @@ aside ul li:hover, aside ul a:hover {
     text-decoration: none;
     transform: scale(1.05);
 }
+
+main .features {
+    float: left;
+    color: #fff;
+    margin-top: 50px;
+    text-align: center;
+    width: 75%;
+}
+
+main .features h1 {font-size: 50px;}
+main .features p {max-width: 400px; margin: 20px auto}
+
