--- a/mynotebook/main/templates/main/index.html
+++ b/mynotebook/main/templates/main/index.html
@@ -3,7 +3,10 @@
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
-    <h1>Главная страница</h1>
-    <p>Главная страница</p>
+   <div class="features">
+        <h1>Главная страница</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos suscipit, consectetur fugiat asperiores assumenda maxime libero illum eligendi sunt odit minus dicta nostrum cumque, ut autem deleniti corrupti, doloribus sed!</p>
+        <button class="btn btn-warning">Добавить заметку</button>
+    </div>
 {% endblock %}
 
