--- a/mynotebook/main/templates/main/index.html
+++ b/mynotebook/main/templates/main/index.html
@@ -1,12 +1,16 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
    <div class="features">
-        <h1>Главная страница</h1>
+        <h1>{{ title }}</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos suscipit, consectetur fugiat asperiores assumenda maxime libero illum eligendi sunt odit minus dicta nostrum cumque, ut autem deleniti corrupti, doloribus sed!</p>
         <button class="btn btn-warning">Добавить заметку</button>
+
+        {% for val in values %}
+            <p>{{ val }}</p>
+        {% endfor %}
     </div>
 {% endblock %}
 
